--- a/doc/cl_gui_alv_grid.adoc
+++ b/doc/cl_gui_alv_grid.adoc
@@ -2,11 +2,19 @@
 
 :toc-placement!:
 
+ifdef::env-github[]
+:tip-caption: :bulb:
+:note-caption: :information_source:
+:important-caption: :heavy_exclamation_mark:
+:caution-caption: :fire:
+:warning-caption: :warning:
+endif::[]
+
 = CL_GUI_ALV_GRID
  
 Output of Test Report ZAAA_TEST_ADOC_FOR_CLAS 
 
-
+TIP: read carefully!
 
 toc::[]
 
