--- a/doc/cl_gui_alv_grid.adoc
+++ b/doc/cl_gui_alv_grid.adoc
@@ -12,7 +12,7 @@ ifdef::env-github[]
 :warning-caption: :warning:
 endif::[]
 
-= CL_GUI_ALV_GRID
+= :green_book: CL_GUI_ALV_GRID
  
 Output of Test Report ZAAA_TEST_ADOC_FOR_CLAS 
 
